solved scrollbar problem

--- a/src/Components/Shared/NavigationBar/NavigationBar.module.scss
+++ b/src/Components/Shared/NavigationBar/NavigationBar.module.scss
@@ -45,6 +45,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  button {
+    border-radius: 5px;
+  }
 }
 
 .fileName {
